Добавил использование Thymeleaf-атрибутов на страницу просмотра больницы.

--- a/src/main/resources/templates/hospitals/hospital.html
+++ b/src/main/resources/templates/hospitals/hospital.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Медицинские учреждения</title>
+        <title th:text="${title}">Медицинское учреждение</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -18,21 +18,21 @@
             <!---->
             <div class="row mb-5">
                 <div class="col-12 text-center">
-                    <h1 class="fs-2">Национальный медицинский исследовательский центр имени В. А. Алмазова</h1>
-                    <p class="fs-4 mb-0">OID: 12.3235.4546.2345</p>
+                    <h1 th:text="${hospital.name}" class="fs-2">Национальный медицинский исследовательский центр имени В. А. Алмазова</h1>
+                    <p th:text="${hospital.oid}" class="fs-4 mb-0">OID: 12.3235.4546.2345</p>
                 </div>
             </div>
             <!---->
             <div class="row mb-5">
                 <div class="col-12">
                     <div class="mb-3">
-                        <a href="#" class="text-secondary fs-4">Администраторы</a>
+                        <a href="#" th:href="@{/hospitals/__${hospital.id}__/admins}" class="text-secondary fs-4">Администраторы</a>
                     </div>
                     <ul class="mb-0 fs-5">
-                        <li>Активные: 5</li>
-                        <li>В отпуске: 1</li>
-                        <li>На больничном: 2</li>
-                        <li>Уволенные: 0</li>
+                        <li th:text="'Активные: ' + ${adminStat.activeCount}">Активные: 5</li>
+                        <li th:text="'В отпуске: ' + ${adminStat.vacationCount}">В отпуске: 1</li>
+                        <li th:text="'На больничном: ' + ${adminStat.sickLeaveCount}">На больничном: 2</li>
+                        <li th:text="'Уволенные: ' + ${adminStat.dismissalCount}">Уволенные: 0</li>
                     </ul>
                 </div>
             </div>
@@ -41,14 +41,14 @@
             <div class="row mb-5">
                 <div class="col-12">
                     <div class="mb-3">
-                        <a href="#" class="text-secondary fs-4">Врачи</a>
+                        <a href="#" th:href="@{/hospitals/__${hospital.id}__/doctors}" class="text-secondary fs-4">Врачи</a>
                     </div>
                     <ul class="mb-0 fs-5">
-                        <li>Активные: 11</li>
-                        <li>В отпуске: 2</li>
-                        <li>На больничном: 0</li>
-                        <li>Уволенные: 3</li>
-                        <li>Без пациентов: 2</li>
+                        <li th:text="'Активные: ' + ${doctorStat.activeCount}">Активные: 11</li>
+                        <li th:text="'В отпуске: ' + ${doctorStat.vacationCount}">В отпуске: 2</li>
+                        <li th:text="'На больничном: ' + ${doctorStat.sickLeaveCount}">На больничном: 0</li>
+                        <li th:text="'Уволенные: ' + ${doctorStat.dismissalCount}">Уволенные: 3</li>
+                        <li th:text="'Без пациентов: ' + ${doctorStat.withoutPatientsCount}">Без пациентов: 2</li>
                     </ul>
                 </div>
             </div>
@@ -57,12 +57,12 @@
             <div class="row mb-5">
                 <div class="col-12">
                     <div class="mb-3">
-                        <a href="#" class="text-secondary fs-4">Пациенты</a>
+                        <a href="#" th:href="@{/hospitals/__${hospital.id}__/patients}" class="text-secondary fs-4">Пациенты</a>
                     </div>
                     <ul class="mb-0 fs-5">
-                        <li>Активные: 24</li>
-                        <li>Неактивные: 2</li>
-                        <li>Нераспределённые: 11</li>
+                        <li th:text="'Активные: ' + ${patientStat.activeCount}">Активные: 24</li>
+                        <li th:text="'Неактивные: ' + ${patientStat.activeCount}">Неактивные: 2</li>
+                        <li th:text="'Нераспределённые: ' + ${patientStat.uncallocated}">Нераспределённые: 11</li>
                     </ul>
                 </div>
             </div>
@@ -72,8 +72,8 @@
                     <div class="mb-3">
                         <a href="#" class="text-secondary fs-4">Заявка</a>
                     </div>
-                    <p class="fs-5 mb-1">Заявка на регистрацию медицинского учреждения была подана 19-09-2022 в 16:54:12</p>
-                    <p class="fs-5 mb-0">Медицинское учреждение было зарегистрировано 21-11-2022 в 17:54:12</p>
+                    <p class="fs-5 mb-1">Заявка на регистрацию медицинского учреждения была подана <span th:text="${hospital.request.formattedDate}">19-09-2022 в 16:54:12</span></p>
+                    <p class="fs-5 mb-0"><span th:text="${hospital.formattedDate}">19-09-2022 в 16:54:12</span></p>
                 </div>
             </div>
             <!---->
