--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,18 +14,17 @@
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
-        <!--<div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>-->
         <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
-
-        <div class="container text-dark my-5">
+        <!---->
+        <div class="container text-secondary my-5">
             <!---->
             <div class="row text-center mb-2">
                 <div class="col-12">
                     <h1 class="fs-2">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</h1>
                 </div>
             </div>
-
-            <div class="row text-secondary mb-5">
+            <!---->
+            <div class="row mb-5">
                 <div class="col-12">
                     <div class="fs-5">
                         <p>
@@ -43,11 +42,11 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row mb-3">
-                <h2 class="text-center fs-2">Контакты главного администратора</h2>
+            <!---->
+            <div class="row text-center mb-3">
+                <h2 class="fs-2">Контакты главного администратора</h2>
             </div>
-
+            <!---->
             <div class="row">
                 <div class="col-12">
                     <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'">
@@ -57,7 +56,7 @@
                     </div>
                 </div>
             </div>
-
+            <!---->
             <div class="row" th:if="${contacts.empty}" id="empty-contacts-message">
                 <div class="col-12">
                     <div class="text-secondary text-center fst-italic fs-4">К сожалению, список контактов главного администратора пока пуст</div>
@@ -65,11 +64,10 @@
             </div>
             <!---->
         </div>
-
+        <!---->
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
-
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-
+        <!---->
         <script src="../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
         <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
