--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -14,19 +14,15 @@
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
         <!---->
-        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
-
-        <div class="container my-5">
+        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
+        <!---->
+        <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5">
-                <h1 class="text-dark fs-2 word-wrap">Заявка на регистрацию медицинского учреждения</h1>
-            </div>
-
-            <div class="row mb-5">
+            <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-dark border rounded text-gray-300 fs-5 p-3" id="hospital-registration-form">
+                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-gray-200 border rounded fs-5 p-3" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка</h2>
-                        <hr class="text-white mb-1" />
+                        <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="lastname" class="form-label">Фамилия <span class="text-danger fs-6"> *</span></label>
@@ -50,7 +46,7 @@
                             <label for="post" class="form-label">Ваша должность в этом медицинском учреждении <span class="text-danger fs-6"> *</span></label>
                             <input type="text" name="post" id="post" class="form-control" placeholder="Главный врач" />
                         </div>
-                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center m-1 mb-3">
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="passport" class="form-label">Серия и номер паспорта <span class="text-danger fs-6"> *</span></label>
                                 <input type="text" name="passport" id="passport" class="form-control" placeholder="3012 981322" />
@@ -65,31 +61,22 @@
                             <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
                         </div>
                         <div class="m-1 mb-4">
-                            <label for="comment" class="form-label">Комментарий к заявке</label>
-                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать, для чего вы оставляете данную заявку"></textarea>
+                            <label for="comment" class="form-label">Комментарий</label>
+                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Можете написать здесь что-нибудь про "></textarea>
                         </div>
-                        <hr class="text-white" />
+                        <hr />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
                     </form>
                 </div>
             </div>
-
-            <div class="row text-center">
-                <div class="col-12 mx-auto">
-                    <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
-                </div>
-            </div>
             <!---->
         </div>
-
+        <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
-
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-
+        <!---->
         <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
         <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
