--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -14,27 +14,40 @@
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
-        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
-
-        <div class="container my-5">
+        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
+        <!---->
+        <div class="container text-gray-300 my-5">
             <!---->
-            <div class="row text-center mb-5">
+            <!--<div class="row text-center mb-5">
                 <h1 class="text-dark fs-2 word-wrap">
                     Регистрация от имени медицинского учреждения
                     <span th:text="'&quot;' + ${hospitalName} + '&quot;'" class="fw-bold">"Национальный медицинский исследовательский центр имени В. А. Алмазова"</span>
                     на роль
                     <span id="role" th:text="'&quot;' + ${role} + '&quot;'" class="fw-bold">"Администратор"</span>
                 </h1>
-            </div>
-
+            </div>-->
+            <!---->
             <div class="row mb-5">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/registration}" method="post" class="bg-dark border border-dark rounded text-gray-300 fs-5 p-3" id="user-registration-form">
+                    <form action="#" th:action="@{/rest/registration}" method="post" class="bg-secondary border rounded fs-5 p-3" id="user-registration-form">
                         <h2 class="fs-4">Регистрация</h2>
                         <hr class="text-white" />
                         <div class="mb-3">
+                            <p class="form-label">Предопределённая информация</p>
+                            <div class="border rounded p-2" id="predefined-info">
+                                <div class="mb-2 m-1">
+                                    <label for="hospital-name" class="form-label">Медицинское учреждение</label>
+                                    <input th:value="${code.hospital.name}" type="text" name="hospital-name" id="hospital-name" class="form-control" disabled />
+                                </div>
+                                <div class="mb-3 m-1">
+                                    <label for="role" class="form-label">Роль</label>
+                                    <input th:value="${code.role.alias}" type="text" name="role" id="role" class="form-control" disabled />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
                             <p class="form-label">Логин-информация</p>
-                            <div class="border border-secondary rounded p-2" id="login-info">
+                            <div class="border rounded p-2" id="login-info">
                                 <div class="mb-2 m-1">
                                     <label for="email" class="form-label">Почта <span class="text-danger fs-6"> *</span></label>
                                     <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
@@ -47,7 +60,7 @@
                         </div>
                         <div class="mb-3" th:if="${isEmployee}">
                             <p class="form-label">Рабочая информация</p>
-                            <div class="border border-secondary rounded p-2" id="employee-info">
+                            <div class="border rounded p-2" id="employee-info">
                                 <div class="mb-3 m-1">
                                     <label for="post" class="form-label">Должность <span class="text-danger fs-6"> *</span></label>
                                     <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" />
@@ -56,7 +69,7 @@
                         </div>
                         <div class="mb-3">
                             <p class="form-label">Общая информация</p>
-                            <div class="border border-secondary rounded p-2" id="general-info">
+                            <div class="border rounded p-2" id="general-info">
                                 <div class="mb-2">
                                     <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
                                         <div class="flex-grow-1 m-1">
@@ -77,7 +90,7 @@
                                     <label for="phone-number" class="form-label">Номер телефона <span class="text-danger fs-6"> *</span></label>
                                     <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="89212345901" />
                                 </div>
-                                <div class="mb-2 m-1">
+                                <div class="mb-3 m-1">
                                     <p class="form-label">Пол</p>
                                     <div class="form-check" th:each="each, status : ${genders}" id="gender">
                                         <div>
@@ -97,23 +110,20 @@
                     </form>
                 </div>
             </div>
-
-            <div class="row text-center">
+            <!---->
+            <!--<div class="row text-center">
                 <div class="col-12 mx-auto">
                     <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
                 </div>
-            </div>
+            </div>-->
             <!---->
         </div>
-
+        <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
-
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-
+        <!---->
         <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
         <script src="../../static/js/registration/registration.js" th:src="@{/js/registration/registration.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
