Исправил недочёты в html- и js-файлах по работе с формой заявки.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="m-1 mb-4">
                             <label for="comment" class="form-label">Комментарий</label>
-                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Можете написать здесь что-нибудь про "></textarea>
+                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное будущее использование данного приложения вашим медицинским учреждением"></textarea>
                         </div>
                         <hr class="text-dark" />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
