--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -12,24 +12,20 @@
         <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
-        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
-
-        <div class="container my-5">
+        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
+        <!---->
+        <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5">
-                <h1 class="text-dark fs-2 word-wrap">Заявка на регистрацию медицинского учреждения</h1>
-            </div>
-
-            <div class="row mb-5">
+            <div class="row">
                 <div class="col-12">
-                    <form action="#" class="bg-dark border rounded text-gray-300 fs-5 p-3">
+                    <form action="#" th:action="@{/rest/hospital-registration/requests/add}" class="bg-gray-400 border rounded fs-5 p-3">
                         <div class="d-flex align-items-center justify-content-between mb-0">
                             <h2 class="fs-4 mb-0">Заявка</h2>
-                            <div th:text="${request.formattedDate}">19.09.2021 в 15:12:14</div>
+                            <div class="fs-4" th:text="${request.formattedDate}">19.09.2021 в 15:12:14</div>
                         </div>
-                        <hr class="text-white mb-1" />
+                        <hr class="text-dark mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="lastname" class="form-label">Фамилия</label>
@@ -72,17 +68,17 @@
                         </div>
                         <div th:if="${commentExists}" class="m-1 mb-4">
                             <label for="comment" class="form-label">Комментарий к заявке</label>
-                            <textarea th:value="${request.comment}" name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать, для чего вы оставляете данную заявку" disabled></textarea>
+                            <textarea th:text="${request.comment}" name="comment" id="comment" class="form-control" rows="3" disabled></textarea>
                         </div>
-                        <hr class="text-white" />
+                        <hr class="text-dark" />
                         <div class="text-center" th:switch="${#strings.toString(request.hospital.currentState)}">
                             <div th:case="'WAITING_CODE'" class="d-flex flex-row flex-wrap align-items-center justify-content-center">
                                 <button type="button" class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
                                 <button type="button" class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
                             </div>
-                            <div th:case="'WAITING_REGISTRATION'" class="fs-2 fst-italic text-warning">Данное медицинское учреждение ожидает регистрацию администратора</div>
+                            <div th:case="'WAITING_REGISTRATION'" class="fs-2 fst-italic text-warning">Ожидает регистрацию администратора</div>
                             <div th:case="'REGISTERED'" class="fs-2 fst-italic text-success">
-                                Данное медицинское учреждение было зарегистрировано
+                                Было зарегистрировано
                                 <span th:text="${request.hospital.formattedDate}">19.12.2021 в 12:59:01</span>
                             </div>
                         </div>
@@ -91,7 +87,7 @@
             </div>
             <!---->
         </div>
-
+        <!---->
         <div th:if="${#strings.toString(request.hospital.currentState)} == 'WAITING_CODE'" class="modal fade" id="code-generation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -134,16 +130,12 @@
                 </div>
             </div>
         </div>
-
+        <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
-
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-
-        <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
+        <!---->
         <script src="../../static/js/hospitals/hospital-registration-request.js" th:src="@{/js/hospitals/hospital-registration-request.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
