Исправил ошибки на странице генерации кода администраторов, исправил соответствующий js-файл. Изменил название input-поля в форме логина для конкретной отправки для Spring Security. Создал контроллер для выдачи страницы генерации кода.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
                         <hr class="text-dark" />
                         <div class="mb-3">
                             <label for="email" class="form-label">Почта</label>
-                            <input type="email" name="email" id="email" class="form-control" placeholder="some@someEmail" />
+                            <input type="text" name="username" id="username" class="form-control" placeholder="some@someEmail" />
                         </div>
                         <div class="mb-4">
                             <label for="password" class="form-label">Пароль</label>
