--- a/src/main/resources/templates/admin-code-gen.html
+++ b/src/main/resources/templates/admin-code-gen.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Регистрация медицинского учреждения</title>
+        <title>Генерация кодов</title>
         <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -12,24 +12,17 @@
         <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
-        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
-
-        <div class="container my-5">
+        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
+        <!---->
+        <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5">
-                <div class="col-12 col-md-10 col-md-8 mx-auto">
-                    <h1 class="text-dark fs-2 word-wrap">
-                        Генерация кодов для регистрации сотрудников и пациентов медицинского учреждения
-                        <span th:text="'&quot;' + ${admin.hospital.name} + '&quot;'" class="fw-bold">"Национальный медицинский исследовательский центр имени В. А. Алмазова"</span>
-                    </h1>
-                </div>
-            </div>
-
             <div class="row">
                 <div class="col-12 col-md-10 col-md-8 mx-auto">
-                    <form action="#" th:action="@{/rest/security-codes/generate/by-admin}" class="bg-dark border rounded text-gray-300 fs-5 p-3" id="code-generation-form">
+                    <form action="#" th:action="@{/rest/security-codes/generate/by-admin}" class="bg-gray-400 border rounded fs-5 p-3" id="code-generation-form">
+                        <h2 class="fs-4">Генерация кодов</h2>
+                        <hr class="text-dark" />
                         <div class="mb-3">
                             <label for="name-code" class="form-label">Медицинское учреждение</label>
                             <input type="text" name="name" id="name-code" class="form-control" disabled th:value="${admin.hospital.name}" />
@@ -42,28 +35,27 @@
                         </div>
                         <div class="mb-3">
                             <label for="email-code" class="form-label">Почта</label>
-                            <input type="email" name="email" id="email-code" class="form-control" />
+                            <input type="email" name="email" id="email-code" class="form-control" placeholder="some@examileMail" />
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-4">
                             <label for="expiration-date" class="form-label">Срок действия кода</label>
                             <select name="expirationDate" id="expiration-date" class="form-select">
                                 <option th:each="each : ${expirationDateList}" th:text="${each.alias}" th:value="${each}">1 день</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-lg btn-primary my-3">Сгенерировать код</button>
+                        <hr class="text-dark" />
+                        <button type="submit" class="text-center btn btn-lg btn-primary my-1">Сгенерировать код</button>
                     </form>
                 </div>
             </div>
             <!---->
         </div>
-
+        <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-
-        <script src="../static/js/hospitals/admin-code-gen.js" th:src="@{/js/hospitals/admin-code-gen.js}"></script>
+        <!---->
+        <script src="../static/js/admin-code-gen.js" th:src="@{/js/admin-code-gen.js}"></script>
         <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
