Убрал лишний Thymeleaf-атрибут со страницы больниц.

--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -59,7 +59,7 @@
             <!---->
             <div class="row" th:if="${hospitals.empty}" id="empty-hospitals-message">
                 <div class="col-12">
-                    <div th:text="${emptyHospitalsListMessage}" class="text-secondary text-center fst-italic fs-2">Список медицинских учреждений пуст</div>
+                    <div class="text-secondary text-center fst-italic fs-2">Список медицинских учреждений пуст</div>
                 </div>
             </div>
             <!---->
